--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
 		"body-parser":"~1.x.x",
 		"compression":"~1.x.x",
 		"express":"~4.x.x",
+		"express-session":"~1.x.x",
 		"mongoose":"~4.x.x",
 		"node-fetch":"~1.x.x"
 	}
